--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -82,4 +82,4 @@ is not necessary, however, go ahead and give it a try anyway.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=Advanced%20React%20Hooks%20%F0%9F%94%A5&e=06%3A%20useDebugValue%3A%20useMedia&em=nateboyette%40icloud.com).
+[the feedback form](https://ws.kcd.im/?ws=Advanced%20React%20Hooks%20%F0%9F%94%A5&e=06%3A%20useDebugValue%3A%20useMedia&em=nateboyette%40icloud.comnateboyette%40icloud.com).
